@@ -274,6 +274,21 @@ abstract class Peak_Controller_Action
     {
         Peak_Registry::o()->app->front->redirect($this->getTitle(), $action, $params);
     }
+	
+	/**
+	 * Use View helper "redirect" to make a HTTP header redirection
+	 *
+	 * @param string  $url
+	 * @param bool    $base_url
+	 * @param integer $http_code
+	 */
+	public function redirectUrl($url, $http_code = 302, $base_url = true)
+	{
+		if($base_url) $url = $this->view->baseUrl($url,true);
+		$this->view->redirect()->url($url, $http_code);
+		//prevent the execution of the rest of controller action 
+		exit();
+	}
 
     /**
      * Action before controller requested action
